--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,46 @@
-html,body{
+html,body,ul,li,p,input{
 	padding: 0;
 	margin: 0;
 }
+input{
+	background: #FCFCFC;
+	border-radius: 3px;
+	border:1px solid #D3D1D4;
+	outline: none;
+}
+html,body{
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
 html{ font-family: "microsoft yahei", "HanHei SC","PingHei","PingFang SC","STHeitiSC-Light","Helvetica Neue","Helvetica","Arial",sans-serif; }
-
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?zdnm6s');
+  src:  url('../fonts/icomoon.eot?zdnm6s#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?zdnm6s') format('truetype'),
+    url('../fonts/icomoon.woff?zdnm6s') format('woff'),
+    url('../fonts/icomoon.svg?zdnm6s#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+.window{
+	transform: scale(5);
+	opacity: 0;
+}
+.window-open{
+	transform: scale(1);
+	opacity: 1;
+}
+li{
+	list-style: none;
+}
+i{
+	font-style: normal;
+}
+.icon{
+	font-family: 'icomoon';
+}
 .select{
 	width: 100%;
 }
@@ -22,14 +59,14 @@ html{ font-family: "microsoft yahei", "HanHei SC","PingHei","PingFang SC","STHei
 	height: 20px;
 	float: left;
 	border-radius: 50%;
-	background-color: #FD3228;
+	background-color: #FF5F5C;
 	margin-right: 5px;
 }
 .header span.it-2{
-	background-color: #F4C612;
+	background-color: #D0D0D0;
 }
 .header span.it-3{
-	background-color: #797979;
+	background-color: #00C956;
 }
 .header .title{
 	width: 900px;
@@ -49,13 +86,43 @@ html{ font-family: "microsoft yahei", "HanHei SC","PingHei","PingFang SC","STHei
 	height: 60px;
 	background: #B3D1C1;
 	background: linear-gradient(10deg,#B3D1C1,#C4FCDE);
-	
-	
 }
 .tool .wrap{
-	height: 60px;
+	height: 50px;
+	padding: 5px 0;
 }
+.tool .fixed-left{
+	float: left;
+	width: 100px;
+	height: 50px;
 
+}
+.tool .fixed-left li.item{
+	width: 50px;
+	height: 50px;
+	border-radius: 6px;
+	cursor: pointer;
+}
+.tool .fixed-left li.item div.text{
+	width: 100%;
+	height: 35px;
+	text-align: center;
+	line-height: 35px;
+	font-size: 30px;
+	color: #333;
+}
+.tool .fixed-left li.item p{
+	width: 100%;
+	height: 15px;
+	line-height: 15px;
+	text-align: center;
+	font-size: 10px;
+	color: #333;
+}
+.tool .fixed-left li.item:hover{
+	background-color: #eee;
+	opacity: 0.8;
+}
 .content{
 	position: absolute;
 	top: 90px;
@@ -114,15 +181,12 @@ html{ font-family: "microsoft yahei", "HanHei SC","PingHei","PingFang SC","STHei
 	width: 100%;
 	height: 20px;
 	background-color: #EBF0F5;
-	margin-top: -298px;
-	margin-left: -531px;
+
 }
 .ybox{
 	width: 20px;
 	height: 100%;
 	background-color: #ccc;
-	margin-top: -279px;
-	margin-left: -550px;
 }
 #mainbox .test{
 	position: absolute;
@@ -141,4 +205,136 @@ html{ font-family: "microsoft yahei", "HanHei SC","PingHei","PingFang SC","STHei
 	bottom: 0px;
 	left: 0;
 	background-color: #8CAAAF;
+}
+.message-box{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 20;
+	left: 0;
+	top: 0;
+}
+
+.mohu{
+	-webkit-filter: blur(20px);
+	-moz-filter: blur(20px);
+	-o-filter: blur(20px);
+}
+.mes{
+	width: 600px;
+	height: 400px;
+
+	margin-top: -200px;
+	margin-left: -300px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	background-color: #E9E8E9;
+	border-radius: 5px;
+
+	-webkit-transition:all 0.5s ease ;
+	-moz-transition:all 0.5s ease ;
+	-ms-transition:all 0.5s ease ;
+	transition:all 0.5s ease ;
+}
+.mes .header-box{
+	position: relative;
+	width: 100%;
+	height: 20px;
+	background-color: #A5A5A5;
+	background: linear-gradient(to bottom,#EBEBEB,#D4D4D4);
+	border-bottom: 1px solid #BDBCBD;
+	text-align: center;
+	line-height: 20px;
+	font-size: 10px;
+	color: #333;
+	border-radius: 5px;
+}
+.mes .con-box{
+	width: 580px;
+	height: 380px;
+	padding: 0 10px;
+	color: #2E2E2F;
+	font-size: 14px;
+}
+.mes .header-box span{
+	position: absolute;
+	display: block;
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+	left: 10px;
+	top: 2.5px;
+	background-color: #FF5F5C;
+	cursor: pointer;
+}
+
+.mes-new .con-box div.item{
+	width: 580px;
+	height: 40px;
+
+}
+.mes-new .con-box div.item label{
+	display: block;
+	width: 100px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	float: left;
+}
+.mes-new .con-box div.item.item-01 input{
+	display: block;
+	width: 200px;
+	height: 20px;
+	float: left;
+	margin-top: 10px;
+	text-indent: 6px;
+	line-height: 20px;
+	font-size: 10px;
+}
+.mes-new .con-box div.item p{
+	display: block;
+	width: 270px;
+	height: 40px;
+	line-height: 40px;
+	float: left;
+	text-indent: 20px;
+	text-align: center;
+}
+.mes-new .con-box div.item.item-02 span{
+	display: block;
+	width: 40px;
+	height: 40px;
+	background-color: #fff;
+	border-radius: 4px;
+	float: left;
+	color: #333;
+	text-align: center;
+	line-height: 40px;
+	font-size: 30px;
+	margin-right: 40px;
+	cursor: pointer;
+}
+.mes-new .con-box div.item.item-02 span.active{
+	background: #333;
+	color: #fff;
+}
+.mes-new .con-box div.item.item-02 p{
+	width: 100px;
+}
+.mes-new .con-box div.item.item-03{
+	padding-top: 40px;
+}
+.mes-new .con-box div.item a.btn{
+	display: block;
+	width: 300px;
+	height: 20px;
+	margin:10px auto 0 auto;
+	background-color: #50A8F5;
+	background: linear-gradient(to bottom,#60AFF3,#0E6DF6);
+	text-align: center;
+	line-height: 20px;
+	color: #fff;
+	text-decoration: none;
+	border-radius: 6px;
 }
