--- a/css/main.css
+++ b/css/main.css
@@ -445,6 +445,10 @@ th:hover{
 	opacity: 0.5;
 	z-index: 1;
 }
+#getButtonData code{
+	width: 100%;
+	height: 100%;
+}
 table tr th.activer{
 	background: pink !important;
 }
